--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,17 @@
             <artifactId>jackson-core</artifactId>
             <version>2.15.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId> <!-- 또는 다른 구현체 -->
+            <version>2.0.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
