--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,18 @@
             <artifactId>slf4j-simple</artifactId> <!-- 또는 다른 구현체 -->
             <version>2.0.9</version>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.12.343</version> <!-- Latest version of SDK v1.x -->
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.5</version> <!-- 최신 버전을 사용하세요 -->
+        </dependency>
+
+
 
     </dependencies>
 
