--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,12 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.5</version> <!-- 최신 버전을 사용하세요 -->
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.33</version> <!-- 적합한 최신 버전 사용 -->
+        </dependency>
+
 
 
 
